fix: web scollbar & dark mode bar.

--- a/apps/next-react-native/src/styles/styles.css
+++ b/apps/next-react-native/src/styles/styles.css
@@ -352,3 +352,13 @@ body {
   width: unset !important;
   padding-right: 0 !important;
 }
+
+[data-color-scheme="dark"] {
+  color-scheme: dark;
+  background-color: #000;
+}
+
+[data-color-scheme="light"] {
+  color-scheme: light;
+  background-color: #fff;
+}
